# ask2elle

./: .gitignore  CHANGELOG.md  Makefile  README.md  Weekly.md  ask2elle.cabal  cabal.project  flake.nix  fourmolu.yaml  modelCore-output.hs  stdCore-output.hs
app/: Main.hs
docs/: CoreLanguage.md  CoreLanguageExaminiationExample.md  GHC Hole Flags Intro.md  Loads.md  OverlappedPattern.md  RemoveRedundantCheck.md  Weekly.md  inlineBind.md  letRecInline.md  mutualRecursive.md  patternErrorExample.md  runGHC.md
ghcTestCases/: Test.hi  Test.hs
ghcTestCases/tasks/Duplicate/modelSolutions/: Mod1.hs  Mod10.hs  Mod11.hs  Mod12.hs  Mod2.hs  Mod3.hs  Mod6.hs  Mod7.hs  Mod9.hs
ghcTestCases/tasks/Duplicate/shoudlntMatch/: Test5.hs
ghcTestCases/testfiles/dupli/bad/: Mod5.hs  Mod6.hs  Test6.hs
ghcTestCases/testfiles/dupli/good/: Mod1.hs  Mod4.hs  Mod8.hs  Test1.hs  Test6.hs  Test7.hs  Test8.hs
ghcTestCases/testfiles/dupli/norm/: Mod5.hs  Mod6.hs  Mod7.hs  Mod8.hs  Mod9.hs  Test5.hs  Test6.hs  Test7.hs  Test9.hs
ghcTestCases/testfiles/factorial/bad/: Mod1.hs  Mod2.hs  Test1.hs  Test2.hs
ghcTestCases/testfiles/factorial/good/: Mod1.hs  Test1.hs
ghcTestCases/testfiles/factorial/norm/: Mod1.hs  Mod2.hs  Mod3.hs  Mod4.hs  Mod5.hs  Mod6.hs  Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  Test6.hs
ghcTestCases/testfiles/fromBin/bad/: Mod1.hs  Mod2.hs  Test1.hs  Test2.hs
ghcTestCases/testfiles/fromBin/good/: Mod1.hs  Mod2.hs  Mod3.hs  Mod4.hs  Test1.hs  Test2.hs  Test3.hs  Test4.hs
ghcTestCases/testfiles/fromBin/norm/: Mod3.hs  Test1.hs  Test3.hs
ghcTestCases/testfiles/length/norm/: Mod1.hs  Test1.hs
ghcTestCases/testfiles/myreverse/bad/: Mod3.hs  Test1.hs  Test3.hs
ghcTestCases/testfiles/myreverse/good/: Mod1.hs  Mod2.hs  Mod4.hs  Mod5.hs  Mod6.hs  Mod7.hs  Mod8.hs  Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  Test6.hs  Test7.hs  Test8.hs
ghcTestCases/testfiles/myreverse/norm/: Mod5.hs  Test5.hs
ghcTestCases/testfiles/other/bad/: Mod1.hs  Test1.hs
ghcTestCases/testfiles/other/good/: Mod1.hs  Mod10.hs  Mod11.hs  Mod12.hs  Mod2.hs  Mod3.hs  Mod4.hs  Mod5.hs  Mod6.hs  Mod7.hs  Mod8.hs  Mod9.hs  Test1.hs  Test10.hs  Test11.hs  Test12.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  Test6.hs  Test7.hs  Test8.hs  Test9.hs
ghcTestCases/testfiles/other/norm/: Mod1.hs  Mod2.hs  Mod3.hs  Mod4.hs  Mod6.hs  Test1.hs  Test2.hs  Test3.hs  Test6.hs
heliumTestCases/FailAsIntended/Edinburgh/: Ex1.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex14.hs  Ex15.hs  Ex16.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex6.hs  Ex7.hs  Ex8.hs  Ex9.hs
heliumTestCases/FailAsIntended/Examples/: AltLeft.hs  AltRight.hs  AltVarBind.hs  BigTypes.hs  Bug1.hs  DeclPatBinding.hs  ExprComprehension.hs  ExprEnumFrom.hs  ExprEnumResult.hs  ExprEnumThen.hs  ExprEnumTo.hs  ExprListElem.hs  ExprListResult.hs  ExprNegateExpr.hs  ExprNegateResult.hs  ExprTuple.hs  FbLeft.hs  Guardedexpression.hs  InfiniteOrNot.hs  InfiniteType1.hs  InfiniteType2.hs  InfiniteType3.hs  InfixTest.hs  KeepTyVarNames.hs  LotsOfTypeErrors.hs  NestedInfiniteType.hs  NewNegationExpr.hs  NoInstance2.hs  NoInstanceEq.hs  PatListElem.hs  PatNegateResult.hs  PatTuple.hs  QualGenerator.hs  QualGuard.hs  QualVarBind.hs  RestrictedAndOverloaded.hs  RightSection.hs  StatGenerator.hs  SynonymErr.hs  TooGenTypeSig.hs  (+10 more)
heliumTestCases/FailAsIntended/Heuristics/: AppInsert1.hs  AppNotAFunction2.hs  AppNotEnough1.hs  AppNotEnough2.hs  AppRemove1.hs  AppReorder2.hs  AppSubterm1.hs  AppSubterm2.hs  AppSwap1.hs  AppSwap2.hs  AppTooManyArguments2.hs  BugReorder.hs  BugReorderTuple.hs  BugUnifier.hs  FBHasTooMany1.hs  FBHasTooMany2.hs  FBHasTooMany3.hs  JavaStringConcat.hs  SimilarFunction1.hs  SimilarLiteral2.hs  SimilarLiteral3.hs  TupleInsert1.hs  TupleInsert2.hs  TupleRemove1.hs  TupleRemove2.hs  TupleReorder1.hs  TupleReorder2.hs  TupleSize1.hs  TupleSize2.hs  TupleSize3.hs  UnaryMinus1.hs  UnaryMinus2.hs  UnifierAlternative.hs  UnifierCaseLeft.hs  UnifierCaseLeft2.hs  UnifierCaseRight.hs  UnifierFunctionBinding.hs  UnifierFunctionBinding2.hs  UnifierGuards.hs  UnifierGuards2.hs
heliumTestCases/FailAsIntended/general/: ShowOfFunction.hs
heliumTestCases/FailAsIntended/kinderrors/: KindCorrect2.hs  KindError7.hs
heliumTestCases/FailAsIntended/parser/: BackQuoteHint3.hs  CommentOrOperator.hs  CommentOrOperator2.hs  CommentOrOperator3.hs  CommentOrOperator4.hs  ContextError.hs  Contexts.hs  DerivingError.hs  DerivingMany.hs  DerivingShowShow.hs  DerivingUnknownClass.hs  ImportListError.hs  InfixAmbiguous.hs  LayoutBad6.hs  ManyResolveErrors.hs  MissingExp.hs  NestedComment.hs  NonTerminatedChar.hs
heliumTestCases/InternalError/Examples/: StatExpr.hs  StatVarBind.hs
heliumTestCases/InternalError/KnownErrors/: Minimaalprograma-loopendeinferencer.hs
heliumTestCases/Pass/knowntofix/: PrintLargeFile.hs  TestTypeSynonyms.hs
heliumTestCases/Pass/thompson/: Thompson33.hs
heliumTestCases/ShouldFailButPassed/Thompson/: Thompson23.hs  Thompson24.hs
heliumTestCases/ShouldFailButPassed/typeclasses/: ClassInstanceError17.hs
heliumTestCases/ShouldPassButFailed/benchmarks/: Main.hs  Parser.hs  big_big_test.hs
heliumTestCases/ShouldPassButFailed/correct/: Andres.hs  EscapeInString.hs  Import.hs  Reexport1.hs  Reexport2.hs  ShowFunctions.hs  ShowOfFunction.hs
heliumTestCases/Success/kinderrors/: KindInfinite.hs
heliumTestCases/Success/knowntofix/: Daan.hs
heliumTestCases/Success/parser/: NotAFloat.hs
heliumTestCases/Success/thompson/: Thompson37.hs
src/Ask2elle/: Debug.hs
src/ghc/GhcLib/Analysis/: Analysis.hs  Feedback.hs  SimilarInstance.hs
src/ghc/GhcLib/Compile/: Compile.hs  ToCore.hs
src/ghc/GhcLib/Compiler/: Compiler.hs
src/ghc/GhcLib/GHCRelated/: Bag.hs  BinderEquality.hs  ShowCore.hs  Utility.hs  Warning.hs
src/ghc/GhcLib/Simplifier/: Simplifier.hs
src/ghc/GhcLib/Transform/: Eta.hs  (+6 more)
src/helium/Helium/: Helium.hs  Parse.hs
src/transformations/: Transformations.hs
src/transformations/Transformations/: Alpha.ag  Alpha.hs  Desugar.hs  Inline.hs  Lambda.hs  Preprocess.hs  Substitute.hs  Test.hs
test/: Main.hs
test/Helium/: Test.hs
(+28 files in other folders)
