cabal-version:   3.0
name:            ask2elle
version:         0.1.0.0
license:         Apache-2.0

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

flag dev
  description: Enable lean development
  default:     False
  manual:      True

common common-warnings
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

common common-extensions
  default-extensions:
    BangPatterns
    DataKinds
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

common common-local-dependencies
  build-depends:
    , helium
    , ideas
    , Top

library helium-stage
  -- import:           common-warnings
  import:           common-extensions
  import:           common-local-dependencies
  exposed-modules:
    Helium.Parse
    Helium.Utility.Helium
    Helium.Utility.Instances

  build-depends:
    , base              ^>=4.16.4.0
    , containers
    , filepath
    , haskell-language
    , mtl
    , process
    , text              >=2.0

  hs-source-dirs:   src/helium
  default-language: Haskell2010


library haskell-language
  import:           common-local-dependencies
  build-depends:
    , base        ^>=4.16.4.0
    , containers
    , mtl
    , QuickCheck
    , uniplate

  exposed-modules:  Language.Haskell.Generated.Syntax

  hs-source-dirs:   src/haskell-language
  default-language: Haskell2010

library transformation
  import:           common-warnings

  -- import:           common-extensions
  import:           common-local-dependencies
  exposed-modules:  Transformations
  other-modules:
    Transformations.Alpha
    Transformations.Desugar
    Transformations.Inline
    Transformations.Lambda
    Transformations.Normalisation.Boolean
    Transformations.Normalisation.Boolean.DecTree
    Transformations.Normalisation.Guards
    Transformations.Normalisation.PatternMatching
    Transformations.Normalisation.Polynomial
    Transformations.Preprocess
    Transformations.Substitute

  -- Transformations.Test

  build-depends:
    , base              ^>=4.16.4.0
    , containers
    , haskell-language
    , mtl
    , QuickCheck
    , uniplate

  hs-source-dirs:   src/transformations
  default-language: Haskell2010

library ask2elle-lib
  import:           common-warnings
  import:           common-extensions
  import:           common-local-dependencies
  exposed-modules:  Debug
  build-depends:
    , base        ^>=4.16.4.0
    , containers
    , filepath
    , mtl
    , process
    , uniplate

  hs-source-dirs:   src/Ask2elle
  default-language: Haskell2010

executable ask2elle
  import:           common-warnings
  import:           common-extensions
  main-is:          Main.hs
  build-depends:
    , ask2elle-lib
    , base              ^>=4.16.4.0
    , haskell-language
    , helium-stage
    , transformation

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite ask2elle-test
  import:           common-warnings
  import:           common-extensions
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , ask2elle-lib
    , base          ^>=4.16.4.0
