cabal-version:   3.0
name:            ask2elle
version:         0.1.0.0
license:         Apache-2.0

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

flag dev
  description: Enable lean development
  default:     False
  manual:      True

common common-warnings
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

common common-extensions
  default-extensions:
    BangPatterns
    DataKinds
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

common common-local-dependencies
  build-depends:
    , helium
    , ideas
    , Top

library helium-stage
  import:           common-warnings
  import:           common-extensions
  import:           common-local-dependencies
  other-modules:
    Helium.Utility.Compile
    Helium.Utility.Instances

  exposed-modules:
    Helium.Helium
    Helium.Utility.PrettyPrinter

  build-depends:
    , base        ^>=4.16.4.0
    , containers
    , filepath
    , mtl
    , process
    , text        ^>=2.0.2

  hs-source-dirs:   src/helium
  default-language: Haskell2010

executable ask2elle
  import:           common-warnings
  import:           common-extensions
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.16.4.0
    , helium-stage
    , text          ^>=2.0.2

  -- , ask2elle-lib
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite ask2elle-test
  import:           common-warnings
  import:           common-extensions
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    Helium.Test
  build-depends:
    , base          ^>=4.16.4.0
    , directory
    , helium-stage
    , hspec
    , filepath
    , text          ^>=2.0.2
