cabal-version:   3.0
name:            ask2elle
version:         0.1.0.0
license:         Apache-2.0

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

flag dev
  description: Enable lean development
  default:     False
  manual:      True

common common-warnings
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

common common-extensions
  default-extensions:
    BangPatterns
    DataKinds
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

common common-local-dependencies
  build-depends:
    , helium
    , ideas
    , Top

library ghc-stage
  import:           common-warnings
  import:           common-extensions
  other-modules:
    GhcLib.Transform.Inline
    GhcLib.Transform.Rename
    GhcLib.Transform.Utility
    GhcLib.Utility.Bag
    GhcLib.Utility.BinderEquality
    GhcLib.Utility.Flags
    GhcLib.Utility.ShowCore
    GhcLib.Utility.Utility
    GhcLib.Utility.Warning

  -- GhcLib.GHC.Driver.Make
  exposed-modules:
    GhcLib.Compiler.Compiler
    GhcLib.Simplifier.Simplifier
    GhcLib.Transform.Transform

  build-depends:
    , base         ^>=4.16.4.0
    , containers
    , exceptions   ^>=0.10.4
    , filepath
    , ghc          >=9.2.5     && <9.3
    , ghc-boot
    , ghc-boot-th
    , megaparsec
    , mtl
    , process
    , text         ^>=2.0
    , uniplate

  default-language: Haskell2010
  hs-source-dirs:   src/ghc

library helium-stage
  import:           common-warnings
  import:           common-extensions
  import:           common-local-dependencies
  other-modules:    Helium.Utility.Instances
  exposed-modules:
    Helium.Helium
    Helium.Utility.Compile
    Helium.Utility.PrettyPrinter

  build-depends:
    , base        ^>=4.16.4.0
    , containers
    , filepath
    , hlint
    , mtl
    , process
    , text        ^>=2.0

  hs-source-dirs:   src/helium
  default-language: Haskell2010

executable ask2elle
  import:           common-warnings
  import:           common-extensions
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.16.4.0
    , bytestring
    , ghc-stage
    , helium-stage
    , text          ^>=2.0

  -- we can update text to 2.1 if the version constraint text , within parsec from Top, is updated.
  --  as the newst version of text and bytestring finally have the same underlying representation of byte arrays





  -- , ask2elle-lib
  hs-source-dirs:   app
  default-language: Haskell2010

-- test-suite ask2elle-test
--   import:           common-warnings
--   import:           common-extensions
--   default-language: Haskell2010
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          Main.hs
--   other-modules:    Helium.Test
--   build-depends:
--     , base          ^>=4.16.4.0
--     , bytestring
--     , conduit
--     , directory
--     , filepath
--     , helium-stage
--     , hspec
--     , hspec-core
--     , text          ^>=2.0
